--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ edition = "2021"
 evdev = { version = "0.12.1", features = ["tokio"] }
 notify = { version = "5.1.0", default-features = false }
 notify-debouncer-mini = "0.2.1"
+rand = "0.8.5"
 serde = { version = "1.0.152", features = ["derive"] }
+smol = "1.3.0"
 thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["full"] }
+tokio-stream = "0.1.11"
 toml = "0.7.1"
 xdg = "2.4.1"
 
