--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 evdev = { version = "0.12.1", features = ["tokio"] }
+ipc-channel = "0.16.0"
+mio = { version = "0.8.5", features = ["os-poll"] }
+nix = "0.26.2"
 notify = { version = "5.1.0", default-features = false }
 notify-debouncer-mini = "0.2.1"
 rand = "0.8.5"
