--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ notify = { version = "5.1.0", default-features = false }
 notify-debouncer-mini = "0.2.1"
 serde = { version = "1.0.152", features = ["derive"] }
 thiserror = "1.0.38"
+tokio = { version = "1.25.0", features = ["full"], optional = true }
+tokio-stream = { version = "0.1.12", optional = true }
 toml = "0.7.1"
 xdg = "2.4.1"
 
+[features]
+default = ["tokio"]
+tokio = ["dep:tokio", "dep:tokio-stream"]
